<?xml version="1.0"?>
<package format="3">
  <name>navigation_examples</name>
  <version>0.0.0</version>
  <description>The navigation_examples metapkg for ROS 2</description>
  <author email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</author>
  <maintainer email="andrea.capodacqua@pal-robotics.com">Andrea Capodacqua</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <exec_depend>goal_navigation_tutorial</exec_depend>
  <exec_depend>costmap_filters_tutorial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
