<?xml version="1.0"?>
<package format="3">
  <name>waypoint_navigation_tutorial</name>
  <version>0.2.0</version>
  <description>The waypoint_navigation_tutorial example.</description>
  <maintainer email="martina.annicelli@pal-robotics.com">Martina Annicelli</maintainer>
  <license>Apache License 2.0</license>
  <author email="martina.annicelli@pal-robotics.com">Martina Annicelli</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <waypoint_navigation_tutorial plugin="${prefix}/plugins.xml" />
  </export>
</package>
